<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Genius</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="green_button">Green</string>
    <string name="yellow_button">Yellow</string>
    <string name="red_button">Red</string>
    <string name="blue_button">Blue</string>
    <string name="button_send">Send</string>

</resources>
